--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,10 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 /*footer css end*/
 
 /*banner section css start*/
+.banner_section.before_load {
+    background-position: center right 150px;
+    background-image: none;
+}
 .banner_section {
     background-image: url('../images/banner_image.png');
     background-position: center;
@@ -554,17 +558,40 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     background-repeat: no-repeat;
     height: 100vh;
     text-align: right;
+    overflow: hidden;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-end;
     padding-bottom: 100px;
+    transition: all 0.75s linear;
+}
+.banner_section:before {
+    content: "";
+    background-color: #070069;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: -1;
 }
 .banner_section .custom_container {
     width: 100%;
     max-width: 1068px;
     padding: 0 15px;
     margin: auto;
+}
+.banner_section.before_load .banner_content {
+    left: 150px;
+    opacity: 0;
+}
+.banner_section .banner_content {
+    opacity: 1;
+    left: 0px;
+    transition: all 0.75s linear;
+    position: relative;
+    z-index: 1;
 }
 .banner_section h1 {
     font-size: 60px;
