--- a/css/style.css
+++ b/css/style.css
@@ -547,15 +547,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 /*footer css end*/
 
 /*banner section css start*/
-.banner_section.before_load {
-    background-position: center right 150px;
-    background-image: none;
-}
 .banner_section {
-    background-image: url('../images/banner_image.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     height: 100vh;
     text-align: right;
     overflow: hidden;
@@ -564,6 +556,24 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     align-items: center;
     justify-content: flex-end;
     padding-bottom: 100px;
+    transition: all 0.75s linear;
+    position: relative;
+}
+.banner_section.before_load img {
+    left: -150px;
+    opacity: 0;
+}
+.banner_section img {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 1;
     transition: all 0.75s linear;
 }
 .banner_section:before {
@@ -574,7 +584,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     bottom: 0px;
     left: 0px;
     right: 0px;
-    z-index: -1;
+    z-index: -2;
 }
 .banner_section .custom_container {
     width: 100%;
