--- a/css/style.css
+++ b/css/style.css
@@ -557,23 +557,27 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     justify-content: flex-end;
     padding-bottom: 100px;
     position: relative;
+    z-index: 1;
 }
-.banner_section.before_load img {
-    left: -150px;
+.banner_section.before_load:after {
+    background-position: center right 150px;
+    background-image: none;
     opacity: 0;
 }
-.banner_section img {
+.banner_section:after {
+    content: "";
+    background-image: url('../images/banner_image.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     position: absolute;
     top: 0px;
     bottom: 0px;
     left: 0px;
     right: 0px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
     z-index: -1;
     opacity: 1;
-    transition: all 0.75s;
+    transition: all 0.75s linear;
 }
 .banner_section:before {
     content: "";
@@ -598,7 +602,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 .banner_section .banner_content {
     opacity: 1;
     left: 0px;
-    transition: all 0.75s;
+    transition: all 0.75s linear;
     position: relative;
     z-index: 1;
 }
