--- a/css/style.css
+++ b/css/style.css
@@ -412,10 +412,16 @@ main.main.top_page_header {
 .site_header .custom_navbar ul li:not(:first-child) {
     margin-left: 85px;
 }
+.site_header.inner_page_header .custom_navbar ul li:not(:first-child) {
+    margin-left: 45px;
+}
 .site_header .custom_navbar ul li a {
     font-weight: 400;
     font-size: 20px;
     color: #fff;
+}
+.site_header.inner_page_header .custom_navbar ul li a {
+    font-size: 15px;
 }
 .navbar_toggler {
     padding: 0;
@@ -2027,8 +2033,8 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 
 /*responsive css start*/
 @media(max-width: 1166px) {
-    .main{
-        padding-top: 84px;
+    .main {
+        padding-top: 72px;
     }
     .custom_col_4 {
         -ms-flex: 0 0 50%;
@@ -2041,7 +2047,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
         max-width: 900px;
     }
     .banner_section {
-        padding-bottom: 80px;
+        padding-bottom: 72px;
     }
     .banner_section h1 {
         font-size: 48px;
@@ -2160,12 +2166,17 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     .site_header .custom_container {
         max-width: 900px;
     }
-    .site_footer .footer_text img,
-    .site_header a.header_logo img {
+    .site_footer .footer_text img {
         max-width: 280px;
+    }
+    .site_header a.header_logo img {
+        max-width: 220px;
     }
     .site_header .custom_navbar ul li:not(:first-child) {
         margin-left: 30px;
+    }
+    .site_header.inner_page_header .custom_navbar ul li:not(:first-child) {
+        margin-left: 20px;
     }
     .site_footer p, .site_footer a {
         font-size: 18px;
